--- a/index.html
+++ b/index.html
@@ -1,10 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Анна Серба</h1>
-</body>
+<html>
+  <head>
+    <title>AnnSerba</title>
+    <link rel="stylesheet" href="dest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dest/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="dest/css/_all-skins.min.css">
+    <link rel="stylesheet" href="dest/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  </head>
+  <body class="skin-yellow-light">
+    <header class="main-header"><a class="logo">AnnSerba</a>
+      <nav class="navbar navbar-static-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button data-toggle="collapse" data-target="#navbar-collapse" class="navbar-toggle collapsed"><i class="fa fa-bars"></i></button>
+          </div>
+          <div id="navbar-collapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="#Skills">Skills</a></li>
+              <li><a href="#Portfolio">Portfolio</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="https://github.com/AnnSerba"><i class="fa fa-github"> link to GitHub</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="content">
+      <div id="Skills">
+        <h1 class="text-center">Skills</h1>
+        <div class="box box-solid">
+          <div class="box-body">
+            <div class="container">
+              <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
+                <ol class="carousel-indicators">
+                  <li data-target="#carousel-example-generic" data-slide-to="0" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="1" class="bg-yellow active"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="item active"><img src="dest/img/htmlcssjs.png" alt="html css js" class="center-block"></div>
+                  <div class="item"><img src="dest/img/AngularJS.png" alt="AnjularJS" class="center-block"></div>
+                </div><a href="#carousel-example-generic" data-slide="prev" class="left carousel-control"><span class="fa fa-angle-left"></span></a><a href="#carousel-example-generic" data-slide="next" class="right carousel-control"><span class="fa fa-angle-right"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="Portfolio">
+        <h1 class="text-center">Portfolio</h1>
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="box solid box-warning">
+              <div class="box-header">
+                <h3 class="box-title">For Yandex</h3><span> courses tacks</span>
+              </div>
+              <div class="box-body"><img src="dest/img/yandex.png" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="./dest/pages/forYandex.html" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/annserba.github.io" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="box solid box-warning">
+              <div class="box-header text-center">
+                <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
+              </div>
+              <div class="box-body"><img src="dest/img/AlvionEurope.jpg" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="https://github.com/WEB-UI-1/KnowledgePortal" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="box solid box-warning">
+              <div class="box-header text-center">
+                <h3 class="box-title">TransportFare</h3><span> Diploma</span>
+              </div>
+              <div class="box-body"><img src="dest/img/TransportFare.png" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="https://github.com/AnnSerba/TransportFare" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="box solid box-warning">
+              <div class="box-header text-center">
+                <h3 class="box-title">Applicant</h3><span> Coursework project</span>
+              </div>
+              <div class="box-body"><img src="dest/img/applicant.png" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
+<script src="dest/js/jQuery-2.2.0.min.js">
+  <script src="dest/js/jQuery-ui.min.js"></script>
+  <script src="dest/js/bootstrap.min.js"></script>
+  <script src="dest/js/app.min.js"></script>
+</script>
