--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
       </div>
     </div>
   </body>
-</html>
-<script src="dest/js/jQuery-2.2.0.min.js">
+  <script src="dest/js/jQuery-2.2.0.min.js"></script>
   <script src="dest/js/jQuery-ui.min.js"></script>
   <script src="dest/js/bootstrap.min.js"></script>
   <script src="dest/js/app.min.js"></script>
-</script>
+</html>
