--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <body class="skin-yellow-light">
-    <header class="main-header"><a class="logo">AnnSerba</a>
+    <header class="main-header"><a href="/" class="logo">AnnSerba</a>
       <nav class="navbar navbar-static-top">
         <div class="container-fluid">
           <div class="navbar-header">
