--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="nav navbar-nav navbar-left">
               <li><a href="#Skills">Skills</a></li>
               <li><a href="#Portfolio">Portfolio</a></li>
+              <li><a href="#AboutMe">About me</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="https://github.com/AnnSerba"><i class="fa fa-github"> link to GitHub</i></a></li>
@@ -61,7 +62,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-warning">
+            <div class="box solid box-danger">
               <div class="box-header text-center">
                 <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
               </div>
@@ -70,7 +71,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-warning">
+            <div class="box solid box-success">
               <div class="box-header text-center">
                 <h3 class="box-title">TransportFare</h3><span> Diploma</span>
               </div>
@@ -79,12 +80,56 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-warning">
+            <div class="box solid box-info">
               <div class="box-header text-center">
                 <h3 class="box-title">Applicant</h3><span> Coursework project</span>
               </div>
               <div class="box-body"><img src="dest/img/applicant.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="AboutMe">
+        <h1 class="text-center">About me</h1>
+        <div class="col-xs-4">
+          <div class="box box-default">
+            <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
+              <h2 class="profile-username text-center">Ann Serba</h2>
+              <p class="text-muted text-center">Software Engineer</p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
+              <ul>
+                <li class="label label-danger">Html</li>
+                <li class="label label-warning">JS</li>
+                <li class="label label-info">Css</li>
+                <li class="label label-primary">Node.js</li>
+                <li class="label label-success">Angular</li>
+                <li class="label label-default">C#</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-8">
+          <div class="nav-tabs-custom">
+            <ul class="nav nav-tabs">
+              <li class="active"><a href="#contacts" data-toggle="tab">Contacts</a></li>
+              <li><a href="#photo" data-toggle="tab">Photo</a></li>
+            </ul>
+            <div class="tab-content">
+              <div id="contacts" class="active tab-pane">
+                <p><i class="fa fa-map-marker"> live in</i><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevestopol</a></p>
+                <p><i class="fa fa-envelope-o"> e-mail: annserba94@gmail.com</i></p><a href="https://github.com/AnnSerba" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://vk.com/annserba" class="btn btn-vk margin"><i class="fa fa-vk"> VK</i></a><a href="https://www.facebook.com/anyserba" class="btn btn-facebook margin"><i class="fa fa-facebook"> Facebook</i></a>
+              </div>
+              <div id="photo" class="tab-pane">
+                <div class="row margin-bottom">
+                  <div class="col-sm-6"><img src="https://pp.vk.me/c630230/v630230957/4a903/hyU0hAhkL7E.jpg" alt="Photo" class="img-responsive"></div>
+                  <div class="col-sm-6">
+                    <div class="row">
+                      <div class="col-sm-6"><img src="https://pp.vk.me/c628316/v628316957/1773/XxruwMOmt38.jpg" alt="Photo" class="img-responsive"><br><img src="https://pp.vk.me/c411730/v411730957/5ba9/_pertYHhylc.jpg" alt="Photo" class="img-responsive"></div>
+                      <div class="col-sm-6"><img src="https://pp.vk.me/c5312/v5312957/82a/VidrbhH6qRQ.jpg" alt="Photo" class="img-responsive"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
