add change to portfolio

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="box solid box-warning">
-              <div class="box-header">
+              <div class="box-header text-center">
                 <h3 class="box-title">For Yandex</h3><span> courses tacks</span>
+                <p>CSS, Jade</p>
               </div>
               <div class="box-body"><img src="dest/img/yandex.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="./dest/pages/forYandex.html" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/annserba.github.io" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
@@ -65,6 +66,7 @@
             <div class="box solid box-danger">
               <div class="box-header text-center">
                 <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
+                <p>AngularJS, Bootstrap, less, mpm, Gulp, Bower</p>
               </div>
               <div class="box-body"><img src="dest/img/AlvionEurope.jpg" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/WEB-UI-1/KnowledgePortal" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
@@ -74,6 +76,7 @@
             <div class="box solid box-success">
               <div class="box-header text-center">
                 <h3 class="box-title">TransportFare</h3><span> Diploma</span>
+                <p>UWP Windows 10</p>
               </div>
               <div class="box-body"><img src="dest/img/TransportFare.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/AnnSerba/TransportFare" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
@@ -83,6 +86,7 @@
             <div class="box solid box-info">
               <div class="box-header text-center">
                 <h3 class="box-title">Applicant</h3><span> Coursework project</span>
+                <p>.Net, Visual Studio, C#, MVC5</p>
               </div>
               <div class="box-body"><img src="dest/img/applicant.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
