--- a/index.html
+++ b/index.html
@@ -56,10 +56,20 @@
             <div class="box solid box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">For Yandex</h3><span> courses tacks</span>
-                <p>CSS, Jade</p>
+                <p>less, Jade</p>
               </div>
               <div class="box-body"><img src="dest/img/yandex.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="./dest/pages/forYandex.html" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/annserba.github.io" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="box solid box-info">
+              <div class="box-header text-center">
+                <h3 class="box-title">For Russia cloud</h3><span></span>
+                <p>less, Jade</p>
+              </div>
+              <div class="box-body"><img src="https://hh.ru/employer-logo/1705895.png" style="padding:45px 0" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="./dest/pages/forRussiaCloud.html" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/annserba.github.io" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
@@ -82,14 +92,24 @@
               <div class="box-footer text-center"><a href="https://github.com/AnnSerba/TransportFare" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-info">
+          <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
+            <div class="box solid box-success">
               <div class="box-header text-center">
                 <h3 class="box-title">Applicant</h3><span> Coursework project</span>
                 <p>.Net, Visual Studio, C#, MVC5</p>
               </div>
               <div class="box-body"><img src="dest/img/applicant.png" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
+            <div class="box solid box-info">
+              <div class="box-header text-center">
+                <h3 class="box-title">Spline</h3><span> Coursework project</span>
+                <p> Visual Studio, C#, WindowsForms</p>
+              </div>
+              <div class="box-body"><img src="dest/img/Spline.png" class="img-responsive center-block img-portfolio"></div>
+              <div class="box-footer text-center"><a href="https://github.com/AnnSerba/RandomAndSpline" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
             </div>
           </div>
         </div>
