--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 class="text-center">Portfolio</h1>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-warning">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">For Yandex</h3><span> courses tacks</span>
                 <p>less, Jade</p>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-info">
+            <div class="box box-info">
               <div class="box-header text-center">
                 <h3 class="box-title">For Russia cloud</h3><span></span>
                 <p>less, Jade</p>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-danger">
+            <div class="box box-danger">
               <div class="box-header text-center">
                 <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
                 <p>AngularJS, Bootstrap, less, mpm, Gulp, Bower</p>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box solid box-success">
+            <div class="box box-success">
               <div class="box-header text-center">
                 <h3 class="box-title">TransportFare</h3><span> Diploma</span>
                 <p>UWP Windows 10</p>
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
-            <div class="box solid box-success">
+            <div class="box box-success">
               <div class="box-header text-center">
                 <h3 class="box-title">Applicant</h3><span> Coursework project</span>
                 <p>.Net, Visual Studio, C#, MVC5</p>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
-            <div class="box solid box-info">
+            <div class="box box-info">
               <div class="box-header text-center">
                 <h3 class="box-title">Spline</h3><span> Coursework project</span>
                 <p> Visual Studio, C#, WindowsForms</p>
