--- a/dest/pages/forRussiaCloud.html
+++ b/dest/pages/forRussiaCloud.html
@@ -15,9 +15,9 @@
   <body class="container">
     <div class="content">
       <div class="col-md-8 col-md-offset-2">
-        <div class="box box-solid box-primary">
-          <div class="box-header text-center">
-            <h1 class="box-title">Размещение заказа</h1>
+        <div class="box box-primary">
+          <div class="box-header with-border text-center">
+            <h3 class="box-title">Размещение заказа</h3>
           </div>
           <div class="box-body">
             <form class="form-horizontal">
