--- a/dest/pages/forRussiaCloud.html
+++ b/dest/pages/forRussiaCloud.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="../css/fileInput.css"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/AdminLTE.min.css"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/skin-yellow-light.min.css"/>
     <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css"/>
+    <link rel="stylesheet" href="../css/AdminLTE.min.css"/>
+    <link rel="stylesheet" href="../css/skin-yellow-light.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
   </head>
   <body class="container">
     <div class="content">
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <div class="form-group col-xs-12">
-                <div class="btn pull-right btn-success margin">Создать</div>
+                <div class="btn pull-right margin btn-flat btn-success">Создать</div>
               </div>
             </form>
           </div>
