change color btn

--- a/dest/pages/forRussiaCloud.html
+++ b/dest/pages/forRussiaCloud.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <div class="form-group col-xs-12">
-                <div class="btn pull-right margin btn-flat btn-success">Создать</div>
+                <div class="btn pull-right margin btn-flat btn-primary">Создать</div>
               </div>
             </form>
           </div>
