--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
             </ul>
             <div class="tab-content">
               <div id="contacts" class="active tab-pane">
-                <p><i class="fa fa-map-marker"> live in</i><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevestopol</a></p>
+                <p>Education:<a href="http://sevsu.ru/">Sevastopol State University</a></p>
+                <p>Specialty: information systems</p>
+                <p><i class="fa fa-map-marker"> live in</i><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
                 <p><i class="fa fa-envelope-o"> e-mail: annserba94@gmail.com</i></p><a href="https://github.com/AnnSerba" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://vk.com/annserba" class="btn btn-vk margin"><i class="fa fa-vk"> VK</i></a><a href="https://www.facebook.com/anyserba" class="btn btn-facebook margin"><i class="fa fa-facebook"> Facebook</i></a>
               </div>
               <div id="photo" class="tab-pane">
