add skils and portfolio

--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
             <div class="container">
               <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
                 <ol class="carousel-indicators">
-                  <li data-target="#carousel-example-generic" data-slide-to="0" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="1" class="bg-yellow active"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="0" class="bg-yellow active"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="1" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="2" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="3" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="4" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="5" class="bg-yellow"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="6" class="bg-yellow"></li>
                 </ol>
                 <div class="carousel-inner">
-                  <div class="item active"><img src="dest/img/htmlcssjs.png" alt="html css js" class="center-block"></div>
+                  <div class="item active"><img src="dest/img/html-css-js.png" alt="html css js" class="center-block"></div>
+                  <div class="item"><img src="dest/img/sass-less.png" alt="sass less" class="center-block"></div>
+                  <div class="item"><img src="dest/img/jade.png" alt="jade" class="center-block"></div>
                   <div class="item"><img src="dest/img/AngularJS.png" alt="AnjularJS" class="center-block"></div>
+                  <div class="item"><img src="dest/img/gulp-bower-npm.png" alt="gulp bower npm" class="center-block"></div>
+                  <div class="item"><img src="dest/img/Scrum-Jira-Git.png" alt="Scrum Jira Git" class="center-block"></div>
+                  <div class="item"><img src="dest/img/webStorm-VS.png" alt="webStorm VS Visual Studio" class="center-block"></div>
                 </div><a href="#carousel-example-generic" data-slide="prev" class="left carousel-control"><span class="fa fa-angle-left"></span></a><a href="#carousel-example-generic" data-slide="next" class="right carousel-control"><span class="fa fa-angle-right"></span></a>
               </div>
             </div>
@@ -99,7 +109,7 @@
                 <p>.Net, Visual Studio, C#, MVC5</p>
               </div>
               <div class="box-body"><img src="dest/img/applicant.png" class="img-responsive center-block img-portfolio"></div>
-              <div class="box-footer text-center"><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+              <div class="box-footer text-center"><a href="http://annserba-001-site1.ctempurl.com/Account/Login" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/Applicant" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
@@ -125,9 +135,20 @@
                 <li class="label label-danger">Html</li>
                 <li class="label label-warning">JS</li>
                 <li class="label label-info">Css</li>
-                <li class="label label-primary">Node.js</li>
-                <li class="label label-success">Angular</li>
-                <li class="label label-default">C#</li>
+                <li class="label label-primary">less</li>
+                <li class="label label-danger">Sass</li>
+                <li class="label label-success">jade</li>
+                <li class="label label-info">git</li>
+                <li class="label label-danger">Angular</li>
+                <li class="label label-success">Node.js</li>
+                <li class="label label-default">npm</li>
+                <li class="label label-danger">gulp</li>
+                <li class="label label-warning">bower</li>
+                <li class="label label-primary">Scrum</li>
+                <li class="label label-success">Jira</li>
+                <li class="label label-info">WebStorm</li>
+                <li class="label label-dafault">C#</li>
+                <li class="label label-primary">Visual Studio</li>
               </ul>
             </div>
           </div>
