--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="box box-danger">
               <div class="box-header text-center">
                 <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
-                <p>AngularJS, Bootstrap, less, mpm, Gulp, Bower</p>
+                <p>AngularJS, Bootstrap, less, npm, Gulp, Bower</p>
               </div>
               <div class="box-body"><img src="dest/img/AlvionEurope.jpg" class="img-responsive center-block img-portfolio"></div>
               <div class="box-footer text-center"><a href="https://github.com/WEB-UI-1/KnowledgePortal" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
