--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box box-info">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">For Russia cloud</h3><span></span>
                 <p>less, Jade</p>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box box-danger">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">KnowledgePortal</h3><span> Course in AlvionEurope</span>
                 <p>AngularJS, Bootstrap, less, npm, Gulp, Bower</p>
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="box box-success">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">TransportFare</h3><span> Diploma</span>
                 <p>UWP Windows 10</p>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
-            <div class="box box-success">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">Applicant</h3><span> Coursework project</span>
                 <p>.Net, Visual Studio, C#, MVC5</p>
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-2">
-            <div class="box box-info">
+            <div class="box box-warning">
               <div class="box-header text-center">
                 <h3 class="box-title">Spline</h3><span> Coursework project</span>
                 <p> Visual Studio, C#, WindowsForms</p>
@@ -127,7 +127,7 @@
       <div id="AboutMe">
         <h1 class="text-center">About me</h1>
         <div class="col-xs-4">
-          <div class="box box-default">
+          <div class="box box-warning">
             <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
               <h2 class="profile-username text-center">Ann Serba</h2>
               <p class="text-muted text-center">Software Engineer</p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
@@ -160,7 +160,7 @@
               <li><a href="#photo" data-toggle="tab">Photo</a></li>
             </ul>
             <div class="tab-content">
-              <div id="contacts" class="active tab-pane">
+              <div id="contacts" class="tab-pane active">
                 <p>Education:<a href="http://sevsu.ru/">Sevastopol State University</a></p>
                 <p>Specialty: information systems</p>
                 <p><i class="fa fa-map-marker"> live in</i><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
