--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
   </body>
   <script src="dest/js/jQuery-2.2.0.min.js"></script>
   <script src="dest/js/jQuery-ui.min.js"></script>
+  <script src="dest/js/scroll.js"></script>
   <script src="dest/js/bootstrap.min.js"></script>
   <script src="dest/js/app.min.js"></script>
 </html>
