--- a/index.html
+++ b/index.html
@@ -29,36 +29,36 @@
         </div>
       </nav>
     </header>
-    <div class="content">
-      <div id="Skills">
-        <h1 class="text-center">Skills</h1>
-        <div class="box box-solid">
-          <div class="box-body">
-            <div class="container">
-              <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-example-generic" data-slide-to="0" class="bg-yellow active"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="1" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="2" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="3" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="4" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="5" class="bg-yellow"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="6" class="bg-yellow"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="item active"><img src="dest/img/html-css-js.png" alt="html css js" class="center-block"></div>
-                  <div class="item"><img src="dest/img/sass-less.png" alt="sass less" class="center-block"></div>
-                  <div class="item"><img src="dest/img/jade.png" alt="jade" class="center-block"></div>
-                  <div class="item"><img src="dest/img/AngularJS.png" alt="AnjularJS" class="center-block"></div>
-                  <div class="item"><img src="dest/img/gulp-bower-npm.png" alt="gulp bower npm" class="center-block"></div>
-                  <div class="item"><img src="dest/img/Scrum-Jira-Git.png" alt="Scrum Jira Git" class="center-block"></div>
-                  <div class="item"><img src="dest/img/webStorm-VS.png" alt="webStorm VS Visual Studio" class="center-block"></div>
-                </div><a href="#carousel-example-generic" data-slide="prev" class="left carousel-control"><span class="fa fa-angle-left"></span></a><a href="#carousel-example-generic" data-slide="next" class="right carousel-control"><span class="fa fa-angle-right"></span></a>
-              </div>
+    <div id="Skills">
+      <h1 class="text-center">Skills</h1>
+      <div class="box box-solid">
+        <div class="box-body">
+          <div class="container">
+            <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="bg-yellow active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1" class="bg-yellow"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2" class="bg-yellow"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3" class="bg-yellow"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="4" class="bg-yellow"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="5" class="bg-yellow"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="6" class="bg-yellow"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="item active"><img src="dest/img/html-css-js.png" alt="html css js" class="center-block"></div>
+                <div class="item"><img src="dest/img/sass-less.png" alt="sass less" class="center-block"></div>
+                <div class="item"><img src="dest/img/jade.png" alt="jade" class="center-block"></div>
+                <div class="item"><img src="dest/img/AngularJS.png" alt="AnjularJS" class="center-block"></div>
+                <div class="item"><img src="dest/img/gulp-bower-npm.png" alt="gulp bower npm" class="center-block"></div>
+                <div class="item"><img src="dest/img/Scrum-Jira-Git.png" alt="Scrum Jira Git" class="center-block"></div>
+                <div class="item"><img src="dest/img/webStorm-VS.png" alt="webStorm VS Visual Studio" class="center-block"></div>
+              </div><a href="#carousel-example-generic" data-slide="prev" class="left carousel-control"><span class="fa fa-angle-left"></span></a><a href="#carousel-example-generic" data-slide="next" class="right carousel-control"><span class="fa fa-angle-right"></span></a>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div id="Portfolio">
         <h1 class="text-center">Portfolio</h1>
         <div class="row">
@@ -126,56 +126,43 @@
       </div>
       <div id="AboutMe">
         <h1 class="text-center">About me</h1>
-        <div class="col-xs-4">
-          <div class="box box-warning">
-            <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
-              <h2 class="profile-username text-center">Ann Serba</h2>
-              <p class="text-muted text-center">Software Engineer</p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
-              <ul>
-                <li class="label label-danger">Html</li>
-                <li class="label label-warning">JS</li>
-                <li class="label label-info">Css</li>
-                <li class="label label-primary">less</li>
-                <li class="label label-danger">Sass</li>
-                <li class="label label-success">jade</li>
-                <li class="label label-info">git</li>
-                <li class="label label-danger">Angular</li>
-                <li class="label label-success">Node.js</li>
-                <li class="label label-default">npm</li>
-                <li class="label label-danger">gulp</li>
-                <li class="label label-warning">bower</li>
-                <li class="label label-primary">Scrum</li>
-                <li class="label label-success">Jira</li>
-                <li class="label label-info">WebStorm</li>
-                <li class="label label-dafault">C#</li>
-                <li class="label label-primary">Visual Studio</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-8">
-          <div class="nav-tabs-custom">
-            <ul class="nav nav-tabs">
-              <li class="active"><a href="#contacts" data-toggle="tab">Contacts</a></li>
-              <li><a href="#photo" data-toggle="tab">Photo</a></li>
-            </ul>
-            <div class="tab-content">
-              <div id="contacts" class="tab-pane active">
-                <p>Education:<a href="http://sevsu.ru/">Sevastopol State University</a></p>
-                <p>Specialty: information systems</p>
-                <p><i class="fa fa-map-marker"> live in</i><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="box box-warning">
+              <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
+                <h2 class="profile-username text-center">Ann Serba</h2>
+                <p class="text-muted text-center">Front-end and .Net developer</p>
+              </div>
+              <div class="box-footer text-center">
                 <p><i class="fa fa-envelope-o"> e-mail: annserba94@gmail.com</i></p><a href="https://github.com/AnnSerba" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://vk.com/annserba" class="btn btn-vk margin"><i class="fa fa-vk"> VK</i></a><a href="https://www.facebook.com/anyserba" class="btn btn-facebook margin"><i class="fa fa-facebook"> Facebook</i></a>
               </div>
-              <div id="photo" class="tab-pane">
-                <div class="row margin-bottom">
-                  <div class="col-sm-6"><img src="https://pp.vk.me/c630230/v630230957/4a903/hyU0hAhkL7E.jpg" alt="Photo" class="img-responsive"></div>
-                  <div class="col-sm-6">
-                    <div class="row">
-                      <div class="col-sm-6"><img src="https://pp.vk.me/c628316/v628316957/1773/XxruwMOmt38.jpg" alt="Photo" class="img-responsive"><br><img src="https://pp.vk.me/c411730/v411730957/5ba9/_pertYHhylc.jpg" alt="Photo" class="img-responsive"></div>
-                      <div class="col-sm-6"><img src="https://pp.vk.me/c5312/v5312957/82a/VidrbhH6qRQ.jpg" alt="Photo" class="img-responsive"></div>
-                    </div>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-xs-8">
+            <div class="box box-warning">
+              <div class="box-body"><strong><i class="fa fa-book margin-r-5"></i> Education</strong>
+                <p class="margin">in Information Systems from<a href="http://sevsu.ru/"> Sevastopol State University</a></p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
+                <ul class="margin">
+                  <li class="label label-danger">Html</li>
+                  <li class="label label-warning">JS</li>
+                  <li class="label label-info">Css</li>
+                  <li class="label label-primary">less</li>
+                  <li class="label label-danger">Sass</li>
+                  <li class="label label-success">jade</li>
+                  <li class="label label-info">git</li>
+                  <li class="label label-danger">Angular</li>
+                  <li class="label label-success">Node.js</li>
+                  <li class="label label-default">npm</li>
+                  <li class="label label-danger">gulp</li>
+                  <li class="label label-warning">bower</li>
+                  <li class="label label-primary">Scrum</li>
+                  <li class="label label-success">Jira</li>
+                  <li class="label label-info">WebStorm</li>
+                  <li class="label label-default">C#</li>
+                  <li class="label label-primary">Visual Studio</li>
+                </ul><strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
+                <p class="margin"><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
+                <iframe src="https://api-maps.yandex.ru/frame/v1/-/CVXO6W~a" width="100%" height="200" frameborder="0"></iframe>
               </div>
             </div>
           </div>
