--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div id="AboutMe">
         <h1 class="text-center">About me</h1>
         <div class="row">
-          <div class="col-xs-4">
+          <div class="col-xs-12 col-md-4">
             <div class="box box-warning">
               <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
                 <h2 class="profile-username text-center">Ann Serba</h2>
@@ -138,7 +138,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-8">
+          <div class="col-xs-12 col-md-8">
             <div class="box box-warning">
               <div class="box-body"><strong><i class="fa fa-book margin-r-5"></i> Education</strong>
                 <p class="margin">in Information Systems from<a href="http://sevsu.ru/"> Sevastopol State University</a></p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
