--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
       </nav>
     </header>
     <div id="Skills">
-      <h1 class="text-center">Skills</h1>
       <div class="box box-solid">
+        <div class="box-header">
+          <h1 class="text-center">Skills</h1>
+        </div>
         <div class="box-body">
           <div class="container">
             <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
@@ -124,51 +126,53 @@
           </div>
         </div>
       </div>
-      <div id="AboutMe">
-        <h1 class="text-center">About me</h1>
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <div class="box box-warning">
-              <div class="box-body box-profile"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
-                <h2 class="profile-username text-center">Ann Serba</h2>
-                <p class="text-muted text-center">Front-end and .Net developer</p>
-              </div>
-              <div class="box-footer text-center">
-                <p><i class="fa fa-envelope-o"> e-mail: annserba94@gmail.com</i></p><a href="https://github.com/AnnSerba" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://vk.com/annserba" class="btn btn-vk margin"><i class="fa fa-vk"> VK</i></a><a href="https://www.facebook.com/anyserba" class="btn btn-facebook margin"><i class="fa fa-facebook"> Facebook</i></a>
-              </div>
+    </div>
+    <div id="AboutMe">
+      <div class="box box-solid with-border">
+        <div class="box-header">
+          <h1 class="text-center">About me</h1>
+        </div>
+        <div class="box-body">
+          <div class="container">
+            <div class="col-xs-12 col-md-4"><img src="dest/img/myPhoto.png" class="profile-user-img img-responsive img-circle">
+              <h2 class="profile-username text-center">Ann Serba</h2>
+              <p class="text-muted text-center">Front-end and .Net developer</p>
+              <p class="text-center"><a href="mailto:annserba94@gmail.com"><i class="fa fa-envelope-o"> e-mail: annserba94@gmail.com</i></a></p>
+              <p class="text-center"><a href="https://github.com/AnnSerba" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://vk.com/annserba" class="btn btn-vk margin"><i class="fa fa-vk"> VK</i></a><a href="https://www.facebook.com/anyserba" class="btn btn-facebook margin"><i class="fa fa-facebook"> Facebook</i></a></p>
             </div>
-          </div>
-          <div class="col-xs-12 col-md-8">
-            <div class="box box-warning">
-              <div class="box-body"><strong><i class="fa fa-book margin-r-5"></i> Education</strong>
-                <p class="margin">in Information Systems from<a href="http://sevsu.ru/"> Sevastopol State University</a></p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
-                <ul class="margin">
-                  <li class="label label-danger">Html</li>
-                  <li class="label label-warning">JS</li>
-                  <li class="label label-info">Css</li>
-                  <li class="label label-primary">less</li>
-                  <li class="label label-danger">Sass</li>
-                  <li class="label label-success">jade</li>
-                  <li class="label label-info">git</li>
-                  <li class="label label-danger">Angular</li>
-                  <li class="label label-success">Node.js</li>
-                  <li class="label label-default">npm</li>
-                  <li class="label label-danger">gulp</li>
-                  <li class="label label-warning">bower</li>
-                  <li class="label label-primary">Scrum</li>
-                  <li class="label label-success">Jira</li>
-                  <li class="label label-info">WebStorm</li>
-                  <li class="label label-default">C#</li>
-                  <li class="label label-primary">Visual Studio</li>
-                </ul><strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
-                <p class="margin"><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
-                <iframe src="https://api-maps.yandex.ru/frame/v1/-/CVXO6W~a" width="100%" height="200" frameborder="0"></iframe>
-              </div>
+            <div class="col-xs-12 col-md-8"><strong><i class="fa fa-book margin-r-5"></i> Education</strong>
+              <p class="margin">in Information Systems from<a href="http://sevsu.ru/"> Sevastopol State University</a></p><strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
+              <ul class="margin">
+                <li class="label label-danger">Html</li>
+                <li class="label label-warning">JS</li>
+                <li class="label label-info">Css</li>
+                <li class="label label-primary">less</li>
+                <li class="label label-danger">Sass</li>
+                <li class="label label-success">jade</li>
+                <li class="label label-info">git</li>
+                <li class="label label-danger">Angular</li>
+                <li class="label label-success">Node.js</li>
+                <li class="label label-default">npm</li>
+                <li class="label label-danger">gulp</li>
+                <li class="label label-warning">bower</li>
+                <li class="label label-primary">Scrum</li>
+                <li class="label label-success">Jira</li>
+                <li class="label label-info">WebStorm</li>
+                <li class="label label-default">C#</li>
+                <li class="label label-primary">Visual Studio</li>
+              </ul><strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
+              <p class="margin"><a href="https://yandex.ru/maps/959/sevastopol/"> Russia, Sevastopol</a></p>
+              <iframe src="https://api-maps.yandex.ru/frame/v1/-/CVXO6W~a" width="100%" height="200" frameborder="0"></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <footer class="footer github">
+      <div class="container">
+        <p class="margin">Personal site AnnSerba</p>
+      </div>
+    </footer>
   </body>
   <script src="dest/js/jQuery-2.2.0.min.js"></script>
   <script src="dest/js/jQuery-ui.min.js"></script>
