--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p>less, Jade</p>
               </div>
               <div class="box-body"><img src="dest/img/yandex.png" class="img-responsive center-block img-portfolio"></div>
-              <div class="box-footer text-center"><a href="http://foryandex.github.io/" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/forYandex" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://github.com/AnnSerba/obfuscator-class" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
+              <div class="box-footer text-center"><a href="https://annserba.github.io/AnnSerba.ForYandex.github.io/" class="btn btn-warning margin"><i class="fa fa-html5"> web page</i></a><a href="https://github.com/AnnSerba/forYandex" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a><a href="https://github.com/AnnSerba/obfuscator-class" class="btn btn-github margin"><i class="fa fa-github"> GitHub</i></a></div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4">
